
 - Fixed a typo & improved the docs in the SUBCLASSING section. [Ron
   Savage]

 - Added the '.tmp' suffix to the default MANIFEST.SKIP file, which
   should avoid adding things like pod2htmi.tmp to the MANIFEST [Ron
   Savage]

 - Fixed a problem in htmlify_pods() that would produce test failures
   on Cygwin (and probably elsewhere).  [Yitzchak Scott-Thoennes]

 - Fixed a fatal error that occurred when the author specified
   'dist_author' manually in their Build.PL script. [Spotted by Ron
   Savage]

 - The 'provides' section of the META.yml file wasn't being built
   properly on Win32, because of a mismatch between URL-format and
   native-format pathnames.  Fixed.  [Reported by Robert Rothenberg]

 - The progress message "lib/Foo.xs -> lib/Foo.c" was previously being
   output even when the Foo.c file wasn't being rebuilt.  It's now
   fixed.

 - Fixed a couple of places in Compat.pm where it could have forgotten
   which perl interpreter it had been run with ($^X isn't very
   trustworthy).

 - On some systems, the way we updated the timestamp on the
   "lib/Foo.bs" file (one of the output files for XS-based modules)
   was failing.  It's been replaced by a simple call to utime().

 - Fixed a problem in t/compat.t that prevented it from being run
   individually using 'make test TEST_FILES=t/compat.t'.  The problem
   was that a couple environment variables (TEST_FILES, MAKEFLAGS)
   were being passed through to subprocesses, and confused them.

 - Fixed an important typo in the documentation for the 'install_base'
   parameter ('libdoc' and 'bindoc' were switched). [Ray Zimmerman]

 - The pass-through Makefiles (type 'small' or 'passthrough') now
   support the TEST_FILES parameter to 'make test'.

 - Fixed a fatal error that would occur on perl 5.005 when building
   HTML documentation, because its version of Pod::Html was old and
   didn't like some of the parameters we fed it. [Spotted by Blair
   Zajac]
