@@ -49,6 +49,11 @@ Revision history for Perl extension Module::Build.
  - Fixed a problem in htmlify_pods() that would produce test failures
    on Cygwin (and probably elsewhere).  [Yitzchak Scott-Thoennes]
 
+ - Fixed a test failure on Cygwin (and probably elsewhere) in
+   t/compat.t, resulting from empty environment variables being set to
+   the empty string (as opposed to simply being unset) by their mere
+   presence in the "EXPORT:" list.
+
  - Fixed a fatal error that occurred when the author specified
    'dist_author' manually in their Build.PL script. [Spotted by Ron
    Savage]
